Fix of a bug in the room distances when parsing files. Fix on the database connectivity (still incomplete). Improvement of the GUI.