@@ -5,6 +5,10 @@ import thesis.model.exceptions.CheckedIllegalArgumentException;
 import java.lang.ref.SoftReference;
 import java.util.*;
 
+/**
+ * Creates time objects when its the first time they are created. If an equal object has been created before, that same object is returned instead.
+ * Has the objective of reusing objects to reduce memory consumption.
+ */
 public class TimeFactory {
     // Static pool to avoid multiple clones of Time
     private static final Map<List<Integer>, SoftReference<Time>> timePool = new WeakHashMap<>();
@@ -12,7 +16,7 @@ public class TimeFactory {
     // Prevents instantiation
     private TimeFactory() {}
 
-    public static Time create(String days, String weeks, int startSlot, int length) throws CheckedIllegalArgumentException {
+    public static Time create(String days, String weeks, short startSlot, short length) throws CheckedIllegalArgumentException {
         int daysLength = days.length();
         if(daysLength == 0 || daysLength > 7) {
             throw new CheckedIllegalArgumentException("The days string must have a length between 1 and 7 but it has a length of " + days.length());
@@ -24,7 +28,7 @@ public class TimeFactory {
         return create(Short.parseShort(days, 2), Integer.parseInt(weeks, 2), startSlot, length);
     }
 
-    public static Time create(short days, int weeks, int startSlot, int length) throws CheckedIllegalArgumentException {
+    public static Time create(short days, int weeks, short startSlot, short length) throws CheckedIllegalArgumentException {
         // days must have a lower value than the maximum value for 7 bits
         if(days <= 0) {
             throw new CheckedIllegalArgumentException("The days value must be between 1 and 127 but it has a value of " + days);
@@ -33,7 +37,7 @@ public class TimeFactory {
             throw new CheckedIllegalArgumentException("The weeks value must be bigger than 0 but it has a value of " + weeks);
         }
 
-        List<Integer> key = Arrays.asList((int) days, weeks, startSlot, length);
+        List<Integer> key = List.of((int) days, weeks, (int) startSlot, (int) length);
 
         SoftReference<Time> ref = timePool.computeIfAbsent(key, t -> new SoftReference<>(new Time(days, weeks, startSlot, length)));
         return ref.get();
